syntax = "proto3";
package rollapp.hub_genesis;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "hub-genesis/params.proto";
import "hub-genesis/locked.proto";

option go_package = "github.com/dymensionxyz/dymension-rdk/x/hub-genesis/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params returns the total set of hub-genesis parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get =
        "/dymensionxyz/dymension-rdk/hub-genesis/params";
  }

   // Locked returns the locked state of the genesis event.
   rpc Locked(QueryLockedRequest) returns (QueryLockedResponse) {
    option (google.api.http).get =
        "/dymensionxyz/dymension-rdk/hub-genesis/locked";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryLockedRequest is the request type for the Query/Locked RPC method.
message QueryLockedRequest {}

// QueryLockedResponse is the response type for the Query/Locked RPC method.
message QueryLockedResponse {
  // locked holds the state of the genesis event
  Locked locked = 1 [(gogoproto.nullable) = false];
}